--- a/wp-content/themes/minyawns/less/main.less
+++ b/wp-content/themes/minyawns/less/main.less
@@ -2795,7 +2795,7 @@ min-height:34px !important;
 width:65%!important;
 }
 .bootstrap-timepicker{
-	margin-top: 22px;
+	margin-top: 24px;
 	margin-left: 13px !important;
 }
 .bootstrap-timepicker-widget{
@@ -6678,7 +6678,7 @@ padding-bottom: 3px;
 	}
 }
 .social-link {
-float: right;
+
 margin-right:-4px;
 }
 .recent-jobs li {
